fix z-index

--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -9,7 +9,7 @@
   background-color: $background-white;
   box-shadow: 0px 4px 24px rgba(105, 105, 105, 0.1);
   border-radius: 30px 0px 30px 30px;
-  z-index: 999;
+  z-index: 2;
   pointer-events: none;
   &.is-open {
     opacity: 1;
